vcluster_versioned_docs/version-0.29.0/third-party-integrations/rancher/install-rancher-integration.mdx
---
title: Install the Rancher integration in vCluster
sidebar_label: Rancher Integration
sidebar_position: 1
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem'
import Flow, { Step } from '@site/src/components/Flow'

<!-- vale off -->

# Install the Rancher integration

The vCluster Rancher integration uses an operator to connect virtual clusters to Rancher by creating a corresponding Rancher cluster resource for each virtual cluster. The operator runs in the local cluster and handles registration automatically. Rancher users do not need cluster management permissions to use this integration. The operator assigns Rancher cluster owner access to the virtual cluster creator, owners of the virtual cluster's project, and owners of the virtual cluster's host cluster. This setup allows virtual clusters to appear and behave like managed clusters in Rancher.

This guide explains how to install the vCluster Rancher Operator.

## Prerequisites

Ensure you have the following prerequisites before installing the vCluster Rancher Operator:

- Admin permissions for the local cluster. You must be able to add Helm repositories and install charts in the local cluster.
- A running Rancher local cluster selected for installation. Please note that the docker install is not supported for production use cases.
- At least one connected downstream cluster where virtual clusters are to be deployed.

## Install the vCluster Rancher Operator

<Flow id="install-vcluster-rancher-operator">
  <Step>
  In the Rancher UI, select the **local cluster** from the cluster overview.
  </Step>
  <Step>
  In the sidebar, navigate to **Apps → Repositories** and click **Create**.
  </Step>
  <Step>
  Set a repository name and use the following Index URL: `https://charts.loft.sh`
  </Step>
  <Step>
  **[Optional]** If pre-release charts are needed, go to **User Preferences**, scroll to **Charts**, and enable **Include Prerelease Versions**.
  </Step>
  <Step>
  In the sidebar, navigate to **Apps → Charts** and search for **vCluster Rancher Operator**.
  </Step>
  <Step>
  Select the chart and follow the prompts to install it in the **local cluster**.
  </Step>
  <Step>
  After installation, go to **Workloads → Deployments** and confirm that the deployment `vcluster-rancher-operator` is active.
  </Step>
</Flow>

After it is installed, the operator automatically registers any vCluster in Rancher. It creates a corresponding Rancher cluster, sets up the connection, and grants cluster owner permissions to relevant users.

To update the virtual cluster, or make changes to the vcluster.yaml, follow the same method that was used for installation. For example if you used the Apps interface as described above, you can simply update the application within the Rancher UI.


## Use the vCluster Rancher Extension UI

Optionally, you can install the vCluster Rancher Extension UI to enable a more tailored user experience in Rancher. 
The vCluster Rancher Extension UI allows you to deploy virtual clusters directly from the Rancher user interface. It provides a separate UI for managing virtual clusters and a user experience more tailored to virtual clusters. The extension also labels virtual clusters in the Rancher Cluster Dashboard so you can distinguish them from physical clusters.

:::note Requirements

Ensure your environment meets the following version requirements:

- Rancher version ≥ 2.10
- Rancher UI Extensions version ≥ 3.0 and < 4.0
- Node.js version ≥ 20

:::

<Flow title="Install the vCluster Rancher Extension UI">

<Step title="Register the Loft chart repository">
Open Rancher and go to **Extensions** in the left navigation. Click the ellipsis menu (`...`) in the top-right corner and select **Manage Repositories**.  
</Step>

<Step>
Click **Create**, enter a name for the repository, and set the **Index URL** to:

```
https://charts.loft.sh/
```

Click **Create** to save the repository. 
</Step>

<Step title="Install the extension">
Navigate to the **Extensions** page and click to the **Available** tab. Find **vCluster Rancher Extension UI** and click **Install**.
</Step>

<Step title="Open the vCluster creation view">

There are multiple entry points to create a virtual cluster:

- From the Rancher home page: click **Create vCluster**
- From the **Cluster Management** view: click **Create Cluster**
- From the **vCluster List** (left menu): click **Create vCluster**

</Step>

<Step title="Select a host cluster">
Use the dropdown list to select the host cluster where the virtual cluster is deployed.

If the `Loft` repository is not available in the target cluster, Rancher prompts you to add it:

- Select **Automatic** to let Rancher configure it.
- Or select **Manual**, click **Create**, and enter:

```
Index URL: https://charts.loft.sh/
```
</Step>

<Step title="Configure and deploy the virtual cluster">
Choose a vCluster chart version.  Set the **namespace** and **name** for the new virtual cluster. Then Click **Create vCluster** to deploy.
</Step>

<Step title="View the new cluster in Rancher">
Navigate to **vCluster List** in the side menu. The new virtual cluster is displayed as a downstream cluster in Rancher.
</Step>

<Step title="Open the Cluster Explorer">
Click the virtual cluster in the list to access it in the **Cluster Explorer**. From here, you can manage workloads, namespaces, and configuration as you would with any other cluster.
</Step>

</Flow>


## Uninstall the vCluster Rancher Operator

To remove the Rancher integration, uninstall the vCluster Rancher Operator from the local cluster. Deleting the operator stops new virtual cluster from appearing in Rancher, but does not remove any existing virtual clusters.

<Flow id="uninstall-vcluster-rancher-operator">
  <Step>
  In the Rancher UI, select the **local cluster**.
  </Step>
  <Step>
  In the sidebar, navigate to **Apps → Installed Apps**.
  </Step>
  <Step>
  Locate the vCluster Rancher Operator chart and delete it.
  </Step>
</Flow>
